--- a/password-strength-meter/README
+++ b/password-strength-meter/README
@@ -1,1 +1,25 @@
+#🔐 Password Strength Checker
+A simple Password Strength Checker built with Streamlit and Python. This tool helps users evaluate their password security by checking length, uppercase/lowercase letters, numbers, and special characters.
 
+🚀 Features
+✅ Real-time Password Strength Analysis
+✅ Interactive UI with Streamlit
+✅ Provides Feedback & Suggestions for Weak Passwords
+✅ User-Friendly Interface with Styled Buttons and Input Fields
+
+##📌 How It Works
+Enter a password in the input field.
+Click the "Check Strength" button.
+The app evaluates your password based on four key security factors:
+Minimum 8 characters
+At least one uppercase and one lowercase letter
+At least one numeric digit (0-9)
+At least one special character (!@#$%^&*)
+The app displays:
+✅ Strong Password (Secure)
+⚠️ Moderate Password (Can be improved)
+❌ Weak Password (Needs improvement with suggestions)
+##🎨 UI Enhancements
+Styled Input Fields (Centered layout for better user experience)
+Custom Button Design (Green theme with hover effect)
+Expandable Feedback Section (Shows suggestions only if password is weak)
